--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,25 @@
 		"render-build": "npm install && npm run build && npm run copy-files",
 		"copy-files": "cp -r src/database dist/ && cp package.json dist/ && cp .env.production dist/ || true"
 	},
-	"keywords": ["express", "typescript", "mysql", "costume"],
+	"keywords": [
+		"express",
+		"typescript",
+		"mysql",
+		"costume"
+	],
 	"author": "Charles Cattoir",
 	"license": "ISC",
 	"dependencies": {
 		"cors": "^2.8.5",
 		"dotenv": "^16.6.1",
 		"express": "^4.19.2",
-		"mysql2": "^3.14.5"
+		"pg": "^8.16.3"
 	},
 	"devDependencies": {
-		"@types/cors": "^2.8.17",
-		"@types/express": "^4.17.21",
-		"@types/node": "^20.12.12",
+		"@types/cors": "^2.8.19",
+		"@types/express": "^4.17.23",
+		"@types/node": "^20.19.13",
+		"@types/pg": "^8.15.5",
 		"nodemon": "^3.1.4",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
